Fix Canvas task alignment issue

--- a/frontend/src/components/TaskView/FutureView/FutureViewTask.module.css
+++ b/frontend/src/components/TaskView/FutureView/FutureViewTask.module.css
@@ -69,11 +69,12 @@
   cursor: not-allowed;
 }
 
-.TaskIconPlaceholder {
-  width: 1.2em;
-  margin: 0 0 0 0;
-  padding-top: 3px;
-  height: 16px;
+.hide {
+  visibility: hidden;
+}
+
+.hide:hover {
+  cursor: not-allowed;
 }
 
 .TaskIconPlaceholder:hover {
